🚀 Phase 2 Complete: Core Web Vitals Enhancement & AI Optimization
✅ GitHub Actions Workflow Fix:
- Fixed Firebase action version in dev-workshop-instant-preview.yml
- Updated from deprecated firebaseextended/github-actions@v1.3.1 to w9jds/setup-firebase@main

🎯 Core Web Vitals Enhancement System:
- Implemented comprehensive performance monitoring with web-vitals v5
- Added WebVitalsMonitor component for real-time development tracking
- Created PerformanceIndicator for production performance status
- Added progressive loading hooks for AI components

🤖 AI Component Lazy Loading:
- Created AILazyWrapper with intersection observer optimization
- Implemented ProgressiveLoader with 3-stage loading system
- Added MemoryOptimizedAI wrapper with memory usage monitoring
- Created AIErrorBoundary for graceful AI component error handling

⚡ Enhanced NeuroSEO™ Orchestrator:
- Implemented LRU cache with intelligent plan-based validation
- Added memory optimization and garbage collection triggers
- Created request deduplication and queue management
- Added performance metrics logging and monitoring

🧪 Production Testing Framework:
- Created comprehensive SecurityTestSuite (CSP, XSS, SQL injection, auth)
- Implemented LoadTestSuite with concurrent user simulation
- Added MobileTestSuite with Core Web Vitals validation
- Created production validation Playwright configuration

📱 Mobile Performance Enhancements:
- WCAG-compliant 44px touch targets validation
- Mobile responsiveness testing across devices
- Text readability and scroll performance optimization
- Image optimization and viewport meta tag validation

🔧 Build System Optimizations:
- Updated package.json with production testing scripts
- Added web-vitals and lru-cache dependencies
- Memory optimization configurations (3072MB dev, 2048MB prod)
- Enhanced client layout with performance monitoring integration

📊 Monitoring & Analytics:
- Integrated Google Analytics performance event tracking
- Real-time performance score calcu

--- a/.github/workflows/dev-workshop-instant-preview.yml
+++ b/.github/workflows/dev-workshop-instant-preview.yml
@@ -63,7 +63,7 @@ jobs:
           echo "✅ Lean build completed"
       
       - name: 🔑 Set up Firebase
-        uses: FirebaseExtended/github-actions/setup-firebase@v1.3.1
+        uses: w9jds/setup-firebase@main
       
       - name: 🌿 Get Channel ID
         id: branch-name
