--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev --turbopack",
     "dev:webpack": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev",
-    "dev-no-turbopack": "cross-env NODE_OPTIONS='--max-old-space-size=6144' next dev",
+    "dev-no-turbopack": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev",
     "dev:turbo": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev --turbopack",
     "dev:fast": "cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev --turbopack --experimental-https",
     "dev:clean": "npm run clean && cross-env NODE_OPTIONS='--max-old-space-size=3072' next dev",
     "genkit:dev": "cross-env NODE_OPTIONS='--max-old-space-size=2048' genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "cross-env NODE_OPTIONS='--max-old-space-size=2048' genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "cross-env NODE_OPTIONS='--max-old-space-size=6144' ESLINT_NO_DEV_ERRORS=true next build",
-    "build:analyze": "cross-env ANALYZE=true NODE_OPTIONS='--max-old-space-size=6144' ESLINT_NO_DEV_ERRORS=true next build",
-    "build:fast": "cross-env NODE_OPTIONS='--max-old-space-size='6144 ESLINT_NO_DEV_ERRORS=true next build",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
+    "build:analyze": "cross-env ANALYZE=true NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
+    "build:fast": "cross-env NODE_OPTIONS='--max-old-space-size=3072' ESLINT_NO_DEV_ERRORS=true next build",
     "build:emergency": "cross-env ESLINT_NO_DEV_ERRORS=true DISABLE_ESLINT=true node scripts/build-skip-typecheck.js",
     "build:production": "npm run clean && npm run optimize && npm run build",
     "fix:typescript-epipe": "node scripts/fix-typescript-epipe-v3.js",
@@ -45,6 +45,13 @@
     "security-check": "npm audit && npm run verify-env",
     "clean": "rimraf .next tsconfig.tsbuildinfo functions/lib testing/results testing/reports",
     "optimize": "ts-node scripts/optimize-project.ts",
+    "firebase:build": "(cd functions && npm run build)",
+    "firebase:serve": "(cd functions && npm run serve)",
+    "firebase:serve:performance": "(cd functions && npm run serve:performance)",
+    "firebase:deploy": "(cd functions && npm run deploy)",
+    "firebase:deploy:performance": "(cd functions && npm run deploy:performance)",
+    "firebase:logs": "(cd functions && npm run logs)",
+    "firebase:logs:performance": "(cd functions && npm run logs:performance)",
     "optimize-windows": "powershell -ExecutionPolicy Bypass -File scripts/optimize-windows-filesystem.ps1",
     "optimize-windows:benchmark": "powershell -ExecutionPolicy Bypass -File scripts/optimize-windows-filesystem.ps1 -Benchmark",
     "optimize-windows:dry-run": "powershell -ExecutionPolicy Bypass -File scripts/optimize-windows-filesystem.ps1 -DryRun",
@@ -71,6 +78,10 @@
     "test:performance": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/performance.spec.ts",
     "test:features": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.role-based.ts --project=legacy-tests testing/specs/main/features/",
     "test:ai-heavy": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --config=playwright.config.ai-heavy.ts --workers=1",
+    "test:production": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts",
+    "test:security": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts --project=security-tests",
+    "test:load": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts --project=load-tests",
+    "test:mobile-compatibility": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.production-validation.ts --project=mobile-compatibility",
     "test:content-analyzer": "cross-env NODE_OPTIONS='--max-old-space-size=1024' playwright test --config=playwright.config.ai-heavy.ts --workers=1 testing/specs/main/features/content-analyzer.spec.ts",
     "test:warmed": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.warming.ts",
     "test:warmed:content-analyzer": "cross-env NODE_OPTIONS='--max-old-space-size=2048' playwright test --config=playwright.config.warming.ts testing/specs/main/features/content-analyzer-warmed.spec.ts",
@@ -152,6 +163,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@stripe/stripe-js": "^7.5.0",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/lru-cache": "^7.10.10",
     "@types/nodemailer": "^6.4.17",
     "@types/stripe": "^8.0.416",
     "canvas-confetti": "^1.9.3",
@@ -167,6 +179,7 @@
     "genkit": "^1.15.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.523.0",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
@@ -183,6 +196,7 @@
     "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "tailwind-merge": "^3.0.1",
+    "web-vitals": "^5.0.3",
     "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
